no-issue: don't flicker selecting a bulk actions in a flexi table

--- a/src/main/webapp/static/themes/light/modules/_course_quota.scss
+++ b/src/main/webapp/static/themes/light/modules/_course_quota.scss
@@ -119,10 +119,6 @@ svg {
   }
 }
 
-.o_table_toolbar {
-  margin-top: 20px;
-}
-
 .o_button_reset_quota {
   float: right;
 }
